<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EFF8FF"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_halo"
            android:textColor="@color/black"
            android:fontFamily="@font/bld"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="25dp"
            android:text="@string/tv_charlotte"
            android:fontFamily="@font/semibold"
            android:textColor="#175CD3"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_hello"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="p" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_lesson_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="#1849A9"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_name"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="27dp"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/tv_title_lesson_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mulai_publikasikan_catatan_pelajaranmu"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/medium"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="p" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Unggah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/tv_unggah_sekarang"
                    android:textColor="#194185"
                    android:fontFamily="@font/medium"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="13.9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_lesson_notes" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_courses"
            android:fontFamily="@font/xtr"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcv_lesson_notes"
            tools:targetApi="p" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_courses" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/btProfil"
            android:scaleType="fitCenter"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:src="@drawable/profile2"
            android:contentDescription="profil"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

<!--        <Button-->
<!--            android:id="@+id/logoutGG"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="logout"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="409dp"
        android:layout_height="80dp"
        android:background="@drawable/inputbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_home" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="87dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="87dp"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_upload" />

            <ImageView
                android:id="@+id/liat"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_library_books_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:text="Home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:text="Library"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/liat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>